dnl Process this file with autoconf to produce a configure script.
AC_INIT(src/init.c)
AM_INIT_AUTOMAKE(functrace, 0.0.1)

dnl Checks for programs.
AC_PROG_CC
AC_MSG_CHECKING("whether $CC accepts -Wall") 
SAVE_CFLAGS=$CFLAGS
CFLAGS="-Wall $CFLAGS" 
AC_TRY_COMPILE(,,AC_MSG_RESULT("yes"),AC_MSG_RESULT("no");CFLAGS=$SAVE_CFLAGS)
AC_ARG_PROGRAM 
AC_PROG_INSTALL 
AC_PROG_LIBTOOL

dnl Checks for header files.
AC_HEADER_STDC
 
dnl Checks for typedefs, structures, and compiler characteristics.
AM_C_PROTOTYPES 
AC_C_CONST
AC_C_INLINE

dnl for the man page
DATE="`date '+%a %d %B %Y'`"
AC_SUBST(DATE) 
 
AC_OUTPUT(doc/Makefile Makefile src/Makefile)
